deployment/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ajmal-ns
  labels:
    name: ajmal-ns
    environment: stage
    devlift.ai/tenant: ajmal
