deployment/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ajmal-trial-us-01-hello-service
  namespace: ajmal-ns
  labels:
    app: ajmal-trial-us-01-hello
spec:
  type: ClusterIP
  selector:
    app: ajmal-trial-us-01-hello
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
